Actualización de estilos responsivos para dispositivos móviles y tabletas

--- a/src/App.css
+++ b/src/App.css
@@ -380,6 +380,11 @@ button:hover {
 }
 
 @media (max-width: 768px) {
+  
+  .itemList {
+        padding: 20px; /* Ajuste para pantallas más pequeñas */
+        font-size: 14px; /* Ajuste del tamaño de fuente */
+    }
   .card {
     flex-direction: column; /* Cambia a una columna */
     height: auto; /* Ajusta la altura */
